Add basic frame work and mobile nav section

--- a/index.html
+++ b/index.html
@@ -2,9 +2,84 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Max Andrew-Beale, Web Developer</title>
 </head>
 <body>
+	<header>
+		<div class="topnav">
+		  <h1><a href="#home" class="active">Max Andrew-Beale</a></h1>
+		  <!-- Navigation links (hidden by default) -->
+		  <div id="myLinks">
+		    <a href="#news">News</a>
+		    <a href="#contact">Contact</a>
+		    <a href="#about">About</a>
+		  </div>
+		  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+		    <i class="fa fa-bars"></i>
+		  </a>
+		</div>
 
+	</header>
+	<div class="wrapper">
+		<div class="about">
+			<h2>About Me</h2>
+			<img src="img/profile.jpg">
+			<p></p>
+			<p></p>
+		</div>
+		<div class="work">
+			<h2>Work</h2>
+			<div class="showcase">
+				<h3>Website Name</h3>
+				<div>
+					<img src="">
+					<img src="">
+					<img src="">
+				</div>
+				<p></p>
+				<p></p>
+				<p></p>
+			</div>
+			<div class="showcase">
+				<h3>Website Name</h3>
+				<div>
+					<img src="">
+					<img src="">
+					<img src="">
+				</div>
+				<p></p>
+				<p></p>
+				<p></p>
+			</div>
+			<div class="showcase">
+				<h3>Website Name</h3>
+				<div>
+					<img src="">
+					<img src="">
+					<img src="">
+				</div>
+				<p></p>
+				<p></p>
+				<p></p>
+			</div>
+		</div>
+		<div class="contact">
+			<h2>Contact Me</h2>
+			<p></p>
+
+		</div>
+	</div>
+
+	<footer>
+		<img src="img/fox glove.jpg" href="foxglove design site">
+			<div class="social media icons">
+				
+
+
+			</div>
+	</footer>
+	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
