Style fotter and social media icons, adjust layout of page for mobile, add borders to headings

--- a/index.html
+++ b/index.html
@@ -33,17 +33,20 @@
 			<i class="fa fa-chevron-down"></i>
 		</div>
 		<div class="work">
-			<h2 id="work">Work</h2>
+			<div><h2 id="work">Work</h2></div>
 			<div class="showcase item">
 				<!-- <img src="img/rose-sculpture1.jpg" alt="Rose Beale Art"> -->
-				<h3><a>Rose Beale Art</a></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				</p>
 				<div class="image-showcase">
 					<img class="wide" src="https://placeimg.com/960/540/tech">
 					<img class="mobile" src="https://placeimg.com/305/540/tech">
 					<img class="fourthree" src="https://placeimg.com/720/540/tech">
+				</div>
+				<div class="site-description">
+					<h3><a>Rose Beale Art</a></h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
 				</div>
 			</div>
 		</div>
