--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<p></p>
 		</div>
 		<div class="chevron">
-			<i class="fa fa-chevron-down"></i>
+			<a href="#work"><i class="fa fa-chevron-down"></i></a>
 		</div>
 		<div class="work">
 			<div><h2 id="work">Work</h2></div>
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 		<div class="chevron">
-			<i class="fa fa-chevron-down"></i>
+			<a href="#contact"><i class="fa fa-chevron-down"></i></a>
 		</div>
 		<div class="contact">
 			<h2 id="contact">Contact</h2>
