--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 	<header>
 		<div class="topnav">
-		  <a href="#home" class="active"><h1>Max Andrew-Beale</h1></a>
+		  <a href="#home"><h1>Max Andrew-Beale</h1></a>
 		  <div id="myLinks">
 			  <a href="#about">About</a>
 			  <a href="#work">Work</a>
 			  <a href="#contact">Contact</a>
 		  </div>
 
-		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+		  <a href="javascript:void(0);" class="icon active" onclick="myFunction()">
 		    <i class="fa fa-bars"></i>
 		  </a>
 		</div>
@@ -27,15 +27,15 @@
 			<h2 class="about" id="#about">About Me</h2>
 			<p>I'm a self-taught Web and WordPress Developer with a passion for all things tech.
 			</p>
-			<p></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+			</p>
 		</div>
 		<div class="chevron">
 			<a href="#work"><i class="fa fa-chevron-down"></i></a>
 		</div>
 		<div class="work">
 			<div><h2 id="work">Work</h2></div>
-			<div class="showcase item">
-				<!-- <img src="img/rose-sculpture1.jpg" alt="Rose Beale Art"> -->
+			<div class="showcase">
 				<div class="image-showcase">
 					<img class="wide" src="https://placeimg.com/960/540/tech">
 					<img class="mobile" src="https://placeimg.com/305/540/tech">
@@ -57,6 +57,8 @@
 			<h2 id="contact">Contact</h2>
 				<!-- <p> GMT +0.0 </p> -->
 				<p>Please feel free to contact me with any enquiries.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			<div>
 				<i class="fas fa-envelope"></i>
 				<a class="email-address" href="mailto:maxandrewbeale@gmail.com?&subject=Helllooo">maxandrewbeale@gmail.com</a>
