add about styles to med media queries, adjust lrg media breakpoint

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 	<div class="wrapper">
 		<div class="about">
 			<img class="profile" src="https://www.gravatar.com/avatar/65ae42587c837a1dc3e588275e5ff9f6?s=500">
-			<h2 class="about" id="#about">About Me</h2>
-			<p>I'm a self-taught Web and WordPress Developer with a passion for all things tech.
-			</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
-			</p>
+			<div class="">
+				<h2 class="about" id="#about">About Me</h2>
+				<p>I'm a self-taught Web and WordPress Developer with a passion for all things tech.
+				</p>
+				<p>I am a fast and efficient front of house professional, excited to return to work after spending 6 months in South East Asia. I have experience in a variety of customer facing roles that I have gained over the last 4 years giving me a good set of essential skills and various specialisations. Looking for a role that presents interesting challenges and problem solving opportunities.
+				</p>
+			</div>
 		</div>
 		<div class="chevron">
 			<a href="#work"><i class="fa fa-chevron-down"></i></a>
@@ -47,8 +49,31 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+
 				</div>
 			</div>
+
+
+			<div class="showcase">
+				<div class="image-showcase">
+					<img class="wide" src="https://placeimg.com/960/540/tech">
+					<img class="mobile" src="https://placeimg.com/305/540/tech">
+					<img class="fourthree" src="https://placeimg.com/720/540/tech">
+				</div>
+				<div class="site-description">
+					<h3><a>Romy Viflic Jewellery</a></h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+				</div>
+			</div>
+
+
 		</div>
 		<div class="chevron">
 			<a href="#contact"><i class="fa fa-chevron-down"></i></a>
