style horizontal rules to sit behind h2, alternate image showcase and description, start media queries for big screens

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-	<title>Max Andrew-Beale, Web Developer</title>
+	<title>Max Andrew-Beale, Developer</title>
 </head>
 <body>
 	<header>
@@ -24,8 +24,8 @@
 	<div class="wrapper">
 		<div class="about">
 			<img class="profile" src="https://www.gravatar.com/avatar/65ae42587c837a1dc3e588275e5ff9f6?s=500">
+			<div class="section-title"><hr><h2 class="about" id="#about">About Me</h2></div>
 			<div class="">
-				<h2 class="about" id="#about">About Me</h2>
 				<p>I'm a self-taught Web and WordPress Developer with a passion for all things tech.
 				</p>
 				<p>I am a fast and efficient front of house professional, excited to return to work after spending 6 months in South East Asia. I have experience in a variety of customer facing roles that I have gained over the last 4 years giving me a good set of essential skills and various specialisations. Looking for a role that presents interesting challenges and problem solving opportunities.
@@ -36,7 +36,8 @@
 			<a href="#work"><i class="fa fa-chevron-down"></i></a>
 		</div>
 		<div class="work">
-			<div><h2 id="work">Work</h2></div>
+
+			<div class="section-title"><hr><h2 id="work">Work</h2></div>
 			<div class="showcase">
 				<div class="image-showcase">
 					<img class="wide" src="https://placeimg.com/960/540/tech">
@@ -54,8 +55,7 @@
 
 				</div>
 			</div>
-
-
+			<hr>
 			<div class="showcase">
 				<div class="image-showcase">
 					<img class="wide" src="https://placeimg.com/960/540/tech">
@@ -79,7 +79,7 @@
 			<a href="#contact"><i class="fa fa-chevron-down"></i></a>
 		</div>
 		<div class="contact">
-			<h2 id="contact">Contact</h2>
+			<div class="section-title"><hr><h2 id="contact">Contact</h2></div>
 				<!-- <p> GMT +0.0 </p> -->
 				<p>Please feel free to contact me with any enquiries.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -95,10 +95,10 @@
 	</div>
 	<footer>
 		<div class="social">
-			<a href="https://twitter.com/maxandrewbeale"><i class="fab fa-facebook-f"></i></a>
+			<a href="https://www.facebook.com/max.andrewbeale"><i class="fab fa-facebook-f"></i></a>
 			<a href="https://twitter.com/maxandrewbeale"><i class="fab fa-twitter"></i></a>
-			<a href="https://twitter.com/maxandrewbeale"><i class="fab fa-linkedin-in"></i></a>
-			<a href="https://twitter.com/maxandrewbeale"><i class="fab fa-github-alt"></i></a>
+			<a href="https://www.linkedin.com/in/maxandrewbeale/"><i class="fab fa-linkedin-in"></i></a>
+			<a href="https://github.com/Wargod56"><i class="fab fa-github-alt"></i></a>
 		</div>
 	</footer>
 	<script type="text/javascript" src="js/scripts.js"></script>
