--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	</header>
 	<div class="wrapper">
 		<div class="about">
+			<div class="section-title"><hr><h2 id="#about">About</h2></div>
 			<img class="profile" src="https://www.gravatar.com/avatar/65ae42587c837a1dc3e588275e5ff9f6?s=500">
-			<div class="section-title"><hr><h2 class="about" id="#about">About Me</h2></div>
 			<div class="">
 				<p>I'm a self-taught Web and WordPress Developer with a passion for all things tech.
 				</p>
@@ -36,7 +36,6 @@
 			<a href="#work"><i class="fa fa-chevron-down"></i></a>
 		</div>
 		<div class="work">
-
 			<div class="section-title"><hr><h2 id="work">Work</h2></div>
 			<div class="showcase">
 				<div class="image-showcase">
@@ -46,13 +45,9 @@
 				</div>
 				<div class="site-description">
 					<h3><a>Rose Beale Art</a></h3>
+					<p>Work in Progress</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-
 				</div>
 			</div>
 			<hr>
@@ -64,10 +59,7 @@
 				</div>
 				<div class="site-description">
 					<h3><a>Romy Viflic Jewellery</a></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+					<p>Work in Progress</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
 				</div>
