--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8"/>
+	<meta name="description" content=""/>
+	<meta name="author" content="Author name" />
+	<meta name="copyright" content="Copyright owner" />
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<title>Max Andrew-Beale, Developer</title>
 </head>
@@ -23,9 +28,9 @@
 	</header>
 	<div class="wrapper">
 		<div class="about">
-			<div class="section-title"><hr><h2 id="#about">About</h2></div>
 			<img class="profile" src="https://www.gravatar.com/avatar/65ae42587c837a1dc3e588275e5ff9f6?s=500">
-			<div class="">
+			<div class="about-text">
+				<div class="section-title"><hr><h2 id="#about">About</h2></div>
 				<p>I'm a self-taught Web and WordPress Developer with a passion for all things tech.
 				</p>
 				<p>I am a fast and efficient front of house professional, excited to return to work after spending 6 months in South East Asia. I have experience in a variety of customer facing roles that I have gained over the last 4 years giving me a good set of essential skills and various specialisations. Looking for a role that presents interesting challenges and problem solving opportunities.
@@ -39,9 +44,9 @@
 			<div class="section-title"><hr><h2 id="work">Work</h2></div>
 			<div class="showcase">
 				<div class="image-showcase">
-					<img class="wide" src="https://placeimg.com/960/540/tech">
-					<img class="mobile" src="https://placeimg.com/305/540/tech">
-					<img class="fourthree" src="https://placeimg.com/720/540/tech">
+					<div><img class="wide" src="https://placeimg.com/960/540/tech"></div>
+					<div><img class="mobile" src="https://placeimg.com/305/540/tech"></div>
+					<div><img class="fourthree" src="https://placeimg.com/720/540/tech"></div>
 				</div>
 				<div class="site-description">
 					<h3><a>Rose Beale Art</a></h3>
@@ -53,9 +58,9 @@
 			<hr>
 			<div class="showcase">
 				<div class="image-showcase">
-					<img class="wide" src="https://placeimg.com/960/540/tech">
-					<img class="mobile" src="https://placeimg.com/305/540/tech">
-					<img class="fourthree" src="https://placeimg.com/720/540/tech">
+					<div><img class="wide" src="https://placeimg.com/960/540/tech"></div>
+					<img class="mobile" src="https://placeimg.com/305/540/tech"></div>
+					<div><img class="fourthree" src="https://placeimg.com/720/540/tech"></div>
 				</div>
 				<div class="site-description">
 					<h3><a>Romy Viflic Jewellery</a></h3>
