--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="showcase">
 				<div class="image-showcase">
 					<div><img class="wide" src="https://placeimg.com/960/540/tech"></div>
-					<img class="mobile" src="https://placeimg.com/305/540/tech"></div>
+					<div><img class="mobile" src="https://placeimg.com/305/540/tech"></div>
 					<div><img class="fourthree" src="https://placeimg.com/720/540/tech"></div>
 				</div>
 				<div class="site-description">
@@ -69,8 +69,6 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
 				</div>
 			</div>
-
-
 		</div>
 		<div class="chevron">
 			<a href="#contact"><i class="fa fa-chevron-down"></i></a>
@@ -95,7 +93,7 @@
 			<a href="https://www.facebook.com/max.andrewbeale"><i class="fab fa-facebook-f"></i></a>
 			<a href="https://twitter.com/maxandrewbeale"><i class="fab fa-twitter"></i></a>
 			<a href="https://www.linkedin.com/in/maxandrewbeale/"><i class="fab fa-linkedin-in"></i></a>
-			<a href="https://github.com/Wargod56"><i class="fab fa-github-alt"></i></a>
+			<a href="https://github.com/maxfoxandrewbeale"><i class="fab fa-github-alt"></i></a>
 		</div>
 	</footer>
 	<script type="text/javascript" src="js/scripts.js"></script>
