--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 	</header>
 	<div class="wrapper">
 		<div class="about">
-			<img class="profile" src="https://www.gravatar.com/avatar/65ae42587c837a1dc3e588275e5ff9f6?s=500">
+			<div><img class="profile" src="https://www.gravatar.com/avatar/65ae42587c837a1dc3e588275e5ff9f6?s=500"></div>
 			<div class="about-text">
-				<div class="section-title"><hr><h2 id="#about">About</h2></div>
+				<div class="section-title"><hr><h2 id="about">About</h2></div>
 				<p>I'm a self-taught Web and WordPress Developer with a passion for all things tech.
 				</p>
 				<p>I am a fast and efficient front of house professional, excited to return to work after spending 6 months in South East Asia. I have experience in a variety of customer facing roles that I have gained over the last 4 years giving me a good set of essential skills and various specialisations. Looking for a role that presents interesting challenges and problem solving opportunities.
@@ -50,7 +50,8 @@
 				</div>
 				<div class="site-description">
 					<h3><a>Rose Beale Art</a></h3>
-					<p>Work in Progress</p>
+					<p>In Development - coming soon</p>
+					<p>Rose Beale is an artist from Lewes, UK. She commissioned me to design and build her a new website….</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
 				</div>
@@ -64,7 +65,8 @@
 				</div>
 				<div class="site-description">
 					<h3><a>Romy Viflic Jewellery</a></h3>
-					<p>Work in Progress</p>
+					<p>In Development - coming soon</p>
+					<p>Romy Viflic is a jewellery and greetings card designer from Brighton, UK...</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
 				</div>
