adjust media query flex box, add final styling, remove placeholder images, add site screenshots, remove placeholder copy

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			<div><img class="profile" src="https://www.gravatar.com/avatar/65ae42587c837a1dc3e588275e5ff9f6?s=500"></div>
 			<div class="about-text">
 				<div class="section-title"><hr><h2 id="about">About</h2></div>
-				<p>I'm a self-taught Web and WordPress Developer with a passion for all things tech.
+				<p>I'm a self-taught aspiring Web and WordPress Developer with a passion for all things tech.
 				</p>
-				<p>I am a fast and efficient front of house professional, excited to return to work after spending 6 months in South East Asia. I have experience in a variety of customer facing roles that I have gained over the last 4 years giving me a good set of essential skills and various specialisations. Looking for a role that presents interesting challenges and problem solving opportunities.
+				<p>I am a professional, hard-working individual, and I am looking for a trainee role that presents interesting challenges and problem solving opportunities.
 				</p>
 			</div>
 		</div>
@@ -44,31 +44,27 @@
 			<div class="section-title"><hr><h2 id="work">Work</h2></div>
 			<div class="showcase">
 				<div class="image-showcase">
-					<div><img class="wide" src="https://placeimg.com/960/540/tech"></div>
-					<div><img class="mobile" src="https://placeimg.com/305/540/tech"></div>
-					<div><img class="fourthree" src="https://placeimg.com/720/540/tech"></div>
+					<!-- <div><img class="wide" alt="Rose Beale Art" src="img/RB.jpg"></div>
+					<div><img class="mobile" alt="Rose Beale Art" src="img/RB.jpg"></div> -->
+					<div><img class="fourthree" alt="Rose Beale Art" src="img/RB.jpg"></div>
 				</div>
 				<div class="site-description">
 					<h3><a>Rose Beale Art</a></h3>
 					<p>In Development - coming soon</p>
 					<p>Rose Beale is an artist from Lewes, UK. She commissioned me to design and build her a new website….</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
 				</div>
 			</div>
 			<hr>
 			<div class="showcase">
 				<div class="image-showcase">
-					<div><img class="wide" src="https://placeimg.com/960/540/tech"></div>
-					<div><img class="mobile" src="https://placeimg.com/305/540/tech"></div>
-					<div><img class="fourthree" src="https://placeimg.com/720/540/tech"></div>
+					<!-- <div><img class="wide" alt="Romy Viflic Jewellery" src="img/RV.jpeg"></div>
+					<div><img class="mobile" alt="Romy Viflic Jewellery" src="img/RV.jpeg"></div> -->
+					<div><img class="fourthree" alt="Romy Viflic Jewellery" src="img/RV.jpeg"></div>
 				</div>
 				<div class="site-description">
 					<h3><a>Romy Viflic Jewellery</a></h3>
 					<p>In Development - coming soon</p>
-					<p>Romy Viflic is a jewellery and greetings card designer from Brighton, UK...</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+					<p>Romy Viflic is a jewellery and greetings card designer from Brighton, UK. She approached me about building a custom site...</p>
 				</div>
 			</div>
 		</div>
@@ -78,9 +74,7 @@
 		<div class="contact">
 			<div class="section-title"><hr><h2 id="contact">Contact</h2></div>
 				<!-- <p> GMT +0.0 </p> -->
-				<p>Please feel free to contact me with any enquiries.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+				<p>Please feel free to contact me with any enquiries. I will try to get back to you as soon as possible.</p>
 			<div>
 				<i class="fas fa-envelope"></i>
 				<a class="email-address" href="mailto:maxandrewbeale@gmail.com?&subject=Helllooo">maxandrewbeale@gmail.com</a>
