--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<title>Max Andrew-Beale, Developer</title>
+	<link rel="icon" type="image/ico" sizes="32x32" href="img/favicon.ico">
+	<link rel="icon" type="image/ico" sizes="16x16" href="img/favicon.ico">
 </head>
 <body>
 	<header>
