improved site copy

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 			<div><img class="profile" src="https://www.gravatar.com/avatar/65ae42587c837a1dc3e588275e5ff9f6?s=500"></div>
 			<div class="about-text">
 				<div class="section-title"><hr><h2 id="about">About</h2></div>
-				<p>I'm a self-taught aspiring Web and WordPress Developer with a passion for all things tech.
+				<p>I'm a self-taught aspiring Web and WordPress Developer with a natural flair for IT and a passion for all things tech.
 				</p>
-				<p>I am a professional, hard-working individual, and I am looking for a trainee role that presents interesting challenges and problem solving opportunities.
+				<p>I am a hard-working, professional individual, and I am currently looking for a junior or trainee role in front end web development working for a digital agency. I am really interested in problem solving challenges and opportunities to continue learning and expand on my current skills.
 				</p>
 			</div>
 		</div>
@@ -47,21 +47,17 @@
 			<div class="section-title"><hr><h2 id="work">Work</h2></div>
 			<div class="showcase">
 				<div class="image-showcase">
-					<!-- <div><img class="wide" alt="Rose Beale Art" src="img/RB.jpg"></div>
-					<div><img class="mobile" alt="Rose Beale Art" src="img/RB.jpg"></div> -->
 					<div><img class="fourthree" alt="Rose Beale Art" src="img/RB.jpg"></div>
 				</div>
 				<div class="site-description">
 					<h3><a>Rose Beale Art</a></h3>
 					<p>In Development - coming soon</p>
-					<p>Rose Beale is an artist from Lewes, UK. She commissioned me to design and build her a new website….</p>
+					<p>Rose Beale is an artist from Lewes, UK. She commissioned me to design and build her a new website…</p>
 				</div>
 			</div>
 			<hr>
 			<div class="showcase">
 				<div class="image-showcase">
-					<!-- <div><img class="wide" alt="Romy Viflic Jewellery" src="img/RV.jpeg"></div>
-					<div><img class="mobile" alt="Romy Viflic Jewellery" src="img/RV.jpeg"></div> -->
 					<div><img class="fourthree" alt="Romy Viflic Jewellery" src="img/RV.jpeg"></div>
 				</div>
 				<div class="site-description">
@@ -76,7 +72,6 @@
 		</div>
 		<div class="contact">
 			<div class="section-title"><hr><h2 id="contact">Contact</h2></div>
-				<!-- <p> GMT +0.0 </p> -->
 				<p>Please feel free to contact me with any enquiries. I will try to get back to you as soon as possible.</p>
 			<div>
 				<i class="fas fa-envelope"></i>
