--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="description" content=""/>
-	<meta name="author" content="Author name" />
-	<meta name="copyright" content="Copyright owner" />
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<meta name="author" content="" />
+	<meta name="copyright" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Max Andrew-Beale, Developer</title>
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-	<title>Max Andrew-Beale, Developer</title>
 	<link rel="icon" type="image/ico" sizes="32x32" href="img/favicon.ico">
 	<link rel="icon" type="image/ico" sizes="16x16" href="img/favicon.ico">
+	<script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header>
@@ -23,8 +24,8 @@
 			  <a href="#contact">Contact</a>
 		  </div>
 
-		  <a href="javascript:void(0);" class="icon active" onclick="myFunction()">
-		    <i class="fa fa-bars"></i>
+		  <a class="icon active" >
+		    <i id="burger" class="fa fa-bars"></i>
 		  </a>
 		</div>
 
@@ -90,6 +91,7 @@
 			<a href="https://github.com/maxfoxandrewbeale"><i class="fab fa-github-alt"></i></a>
 		</div>
 	</footer>
+	<!-- <script type="text/javascript" src="js/jquery-3.4.1.min"></script> -->
 	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
