--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<a href="https://github.com/maxfoxandrewbeale"><i class="fab fa-github-alt"></i></a>
 		</div>
 	</footer>
-	<script type="text/javascript" src="js/jquery"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
