added scrolling animation to nav

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		<div class="topnav">
 		  <a href="#home"><h1>Max Andrew-Beale</h1></a>
 		  <div id="myLinks">
-			  <a href="#about">About</a>
-			  <a href="#work">Work</a>
-			  <a href="#contact">Contact</a>
+			  <a class="about-nav" href="#about">About</a>
+			  <a class="work-nav" href="#work">Work</a>
+			  <a class="contact-nav" href="#contact">Contact</a>
 		  </div>
 
 		  <a class="icon active" >
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 		<div class="chevron">
-			<a href="#work"><i class="fa fa-chevron-down"></i></a>
+			<i class="fa fa-chevron-down work-nav"></i>
 		</div>
 		<div class="work">
 			<div class="section-title"><hr><h2 id="work">Work</h2></div>
@@ -69,17 +69,17 @@
 			</div>
 		</div>
 		<div class="chevron">
-			<a href="#contact"><i class="fa fa-chevron-down"></i></a>
+			<i class="fa fa-chevron-down contact-nav"></i>
 		</div>
 		<div class="contact">
 			<div class="section-title"><hr><h2 id="contact">Contact</h2></div>
 				<p>Please feel free to contact me with any enquiries. I will try to get back to you as soon as possible.</p>
 			<div>
 				<i class="fas fa-envelope"></i>
-				<a class="email-address" href="mailto:maxandrewbeale@gmail.com?&subject=Helllooo">maxandrewbeale@gmail.com</a>
+				<a class="email-address" href="mailto:maxandrewbeale@gmail.com?&subject=Enquiry:">maxandrewbeale@gmail.com</a>
 			</div>
 			<div>
-				<i class="fab fa-twitter"></i><a class="twitter-handle" href="https://twitter.com/maxandrewbeale">@maxandrewbeale</a>
+				<a href="https://twitter.com/maxandrewbeale" ><i class="fab fa-twitter"></i></a><a class="twitter-handle" href="https://twitter.com/maxandrewbeale">@maxandrewbeale</a>
 			</div>
 		</div>
 	</div>
