fix twitter icon color in contact section and clean up anchor tags in that section

--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
 			<div class="section-title"><hr><h2 id="contact">Contact</h2></div>
 				<p>Please feel free to contact me with any enquiries. I will try to get back to you as soon as possible.</p>
 			<div>
-				<i class="fas fa-envelope"></i>
-				<a class="email-address" href="mailto:maxandrewbeale@gmail.com?&subject=Enquiry:">maxandrewbeale@gmail.com</a>
+				<a class="email-address" href="mailto:maxandrewbeale@gmail.com?&subject=Enquiry:">
+					<i class="fas fa-envelope"></i>maxandrewbeale@gmail.com
+				</a>
 			</div>
 			<div>
-				<a href="https://twitter.com/maxandrewbeale" ><i class="fab fa-twitter"></i></a><a class="twitter-handle" href="https://twitter.com/maxandrewbeale">@maxandrewbeale</a>
+				<a class="twitter-handle" href="https://twitter.com/maxandrewbeale" ><i class="fab fa-twitter"></i>@maxandrewbeale</a>
 			</div>
 		</div>
 	</div>
